# PPM

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ppm/: __init__.py  update_checker.py
ppm/cli/: app.py
ppm/config/: __init__.py
ppm/core/: __init__.py
ppm/environments/: __init__.py
ppm/installers/: __init__.py
ppm/models/: __init__.py
ppm/parsers/: __init__.py
ppm/repositories/: __init__.py
ppm/security/: __init__.py
ppm/services/: __init__.py  audit_service.py  doctor_service.py  env_service.py  install_service.py  repair_service.py  search_service.py  sync_service.py  wheelhouse_service.py
ppm/utils/: __init__.py  console.py  security.py
ppm/wheelhouse/: __init__.py
requirements/: base.txt  dev.txt
scripts/: install.sh  run_tests.sh
tests/: __init__.py
tests/cli/: test_commands.py  test_update_fix.py
tests/integration/: test_repository.py
tests/unit/: test_config.py  test_environments.py  test_parsers.py  test_security.py  test_security_enhanced.py
