[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootx-ppm"
version = "1.0.0"
description = "PPM - Python Package Manager: Smart environment and package management CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RootX" }]
requires-python = ">=3.12"
keywords = ["python", "package-manager", "venv", "pip", "wheelhouse", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx[http2]>=0.27.0",
    "pip-api>=0.0.30",
    "packaging>=24.0",
    "pip-audit>=2.7.0",
    "requirements-parser>=0.11.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "platformdirs>=4.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "httpx[http2]>=0.27.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.scripts]
ppm = "ppm.cli.app:main"

[project.urls]
Homepage = "https://github.com/Rootx202/PPM"
Documentation = "https://github.com/Rootx202/PPM"
Repository = "https://github.com/Rootx202/PPM"
Issues = "https://github.com/Rootx202/PPM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
